# OpenRGB-rainbow-keyboard-implementation

./: .gitignore  CMakeLists.txt  README.md
scripts/: rainbow-off.sh  rainbow-on.sh
shortcut-setup/: bashrc_snippet.txt
src/: rainbow_driver.cpp
